增加一键转发功能

--- a/conf/watchdog.conf.example
+++ b/conf/watchdog.conf.example
@@ -5,6 +5,7 @@ name = @usernameofyourbot
 [groups]
 -1000011001100 = puzzles/yourpuzzle.json
 -1000000000001 = anotherpuzzle.json
+[broadcast]
 [confadmins]
 [dataadmins]
 [blackfiletypes]
